# diffusion-brain-alignment

./: Makefile  README.md  pyproject.toml
diffusion_brain_alignment/comparsions/: rsa.py
diffusion_brain_alignment/data/: fmri_laion.py  things_monkey_ephys.py
diffusion_brain_alignment/data/fmri_laion/: download.py
diffusion_brain_alignment/data/results/: visualize_results.ipynb
diffusion_brain_alignment/models/: stable_diffusion.py
notebooks/: index-2.ipynb  index.ipynb  model.ipynb  rdm_steps_tvsd.ipynb  rsa.ipynb  rsa_from_files_colab.ipynb  things.ipynb  upper_bound.ipynb
scripts/: ann_bnn_comparsion.py  ann_bnn_comparsion_gpu.py  ann_bnn_comparsion_gpu_multiple.py  compare_monkeys.py  process_ann_data.py  process_bnn_data.py  run_rsa_bootstrap_ci.py
