[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diffusion_brain_alignment"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipykernel>=7.3.0",
    "laion-fmri",
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["diffusion_brain_alignment"]
include = ["pyproject.toml", "diffusion_brain_alignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diffusion_brain_alignment"]
force-sort-within-sections = true

[tool.uv.sources]
laion-fmri = { git = "https://github.com/ViCCo-Group/LAION-fMRI.git", rev = "main" }

